--- a/test/build.gradle
+++ b/test/build.gradle
@@ -21,3 +21,7 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+test {
+    useJUnitPlatform()
+}
