--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.2'
-    id 'io.spring.dependency-management' version '1.0.12.RELEASE'
+    id 'org.springframework.boot' version '3.0.2'
+    id 'io.spring.dependency-management' version '1.1.0'
     id 'maven-publish'
     id 'signing'
     id 'java'
@@ -8,7 +8,7 @@ plugins {
 }
 
 group 'cn.enaium'
-version '0.2.1'
+version '0.3.0'
 archivesBaseName = 'kook-spring-boot-starter'
 
 repositories {
@@ -18,14 +18,13 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    api 'com.konghq:unirest-java:3.13.11'
 
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
 
 java {
     withSourcesJar()
